--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Feb 16 13:05:16 GMT 2015
-sdk.dir=D\:\\Programmes\\Android Studio\\Android SDK
+#Tue Jan 19 12:54:57 GMT 2016
+sdk.dir=/home/vane/Android/Sdk
