--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
                 android:value="stechb.myfirstapp.MainActivity" />
         </activity>
         <activity
-            android:name=".Settings"
+            android:name=".Ingredients"
             android:label="@string/title_activity_settings"
             android:parentActivityName=".MainActivity"
             android:screenOrientation="portrait">
